--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,28 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
+  flutter_svg: ^0.17.4
+  carousel_slider: ^2.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/images/
+    - assets/images/illustrations/
+
+  fonts:
+    - family: MavenPro
+      fonts:
+        - asset: assets/font/MavenPro-Regular.ttf
+        - asset: assets/font/MavenPro-Bold.ttf
+          weight: 700
+        - asset: assets/font/MavenPro-Black.ttf
+          weight: 900
+        - asset: assets/font/MavenPro-Medium.ttf
+          weight: 500
