--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.17.4
   carousel_slider: ^2.2.1
+  http: ^0.12.2
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.16.1
+  firebase_analytics: ^5.0.2
 
 dev_dependencies:
   flutter_test:
