--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
   firebase_analytics: ^5.0.2
+  google_sign_in: ^4.5.1
 
 dev_dependencies:
   flutter_test:
