--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,13 @@ dependencies:
   flutter_svg: ^0.17.4
   carousel_slider: ^2.2.1
   http: ^0.12.2
+  google_sign_in: ^4.5.1
+
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
   firebase_analytics: ^5.0.2
-  google_sign_in: ^4.5.1
+  firebase_storage: ^3.1.6
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   flutter_test:
