--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   carousel_slider: ^2.2.1
   http: ^0.12.2
   google_sign_in: ^4.5.1
+  xml: ^3.3.1
+  path_provider: ^1.6.11
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
@@ -24,16 +26,13 @@ dependencies:
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.13.7
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
 flutter:
   uses-material-design: true
 
   assets:
     - assets/
     - assets/images/
+    - assets/en/
     - assets/images/illustrations/
 
   fonts:
