Song screen implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_sign_in: ^4.5.1
   xml: ^4.1.0
   path_provider: ^1.6.11
+  styled_text: ^1.0.1+1
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
