--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   xml: ^4.1.0
   path_provider: ^1.6.11
   styled_text: ^1.0.1+1
+  provider: ^4.3.2
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
