--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   path_provider: ^1.6.11
   styled_text: ^1.0.1+1
   provider: ^4.3.2
+  url_launcher: ^5.5.0
 
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.16.1
