--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,10 @@ dependencies:
   styled_text: ^1.0.1+1
   provider: ^4.3.2
   url_launcher: ^5.5.0
+  shared_preferences: ^0.5.10
 
   firebase_core: ^0.4.0+9
-  firebase_auth: ^0.16.1
-  firebase_analytics: ^5.0.2
-  firebase_storage: ^3.1.6
-  cloud_firestore: ^0.13.7
+  firebase_crashlytics: ^0.1.4+1
 
 flutter:
   uses-material-design: true
