--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.18.0
@@ -23,9 +25,14 @@ dependencies:
   provider: ^4.3.2
   url_launcher: ^5.5.0
   shared_preferences: ^0.5.10
+  intl: ^0.16.1
+  intl_translation: ^0.17.10+1
 
   firebase_core: ^0.4.0+9
   firebase_crashlytics: ^0.1.4+1
+
+dev_dependencies:
+  intl_translation: ^0.17.7
 
 flutter:
   uses-material-design: true
