--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.10
   intl: ^0.16.1
   intl_translation: ^0.17.10+1
+  modal_bottom_sheet: ^0.2.0+1
 
   firebase_core: ^0.4.0+9
   firebase_crashlytics: ^0.1.4+1
