--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="worshipsongs"
+        android:label="Worship Songs"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
