--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl_translation: ^0.17.10+1
   modal_bottom_sheet: ^0.2.0+1
   package_info: ^0.4.3
+  sticky_headers: ^0.1.8
 
   firebase_core: ^0.4.0+9
   firebase_crashlytics: ^0.1.4+1
