--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   package_info: ^0.4.3
   sticky_headers: ^0.1.8
 
-  firebase_core: ^0.4.0+9
-  firebase_crashlytics: ^0.1.4+1
+  firebase_core: ^0.5.0
+  firebase_crashlytics: ^0.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.8.0"
