Android output apk name implemented

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,12 @@ flutter {
     source '../..'
 }
 
+android.applicationVariants.all { variant ->
+    variant.outputs.all {
+        outputFileName = "WSongs_${variant.name}-${variant.versionName}.apk"
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
