--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Worship Songs
 
 publish_to: 'none'
 
-version: 0.2.0+5
+version: 0.3.0+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,12 +14,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
   flutter_svg: ^0.18.0
   carousel_slider: ^2.2.1
   http: ^0.12.2
   google_sign_in: ^4.5.1
-  xml: ^4.1.0
   path_provider: ^1.6.11
   styled_text: ^1.0.1+1
   provider: ^4.3.2
@@ -30,9 +28,11 @@ dependencies:
   modal_bottom_sheet: ^0.2.0+1
   package_info: ^0.4.3
   sticky_headers: ^0.1.8
+  image_picker: ^0.6.6+5
 
   firebase_core: ^0.5.0
   firebase_crashlytics: ^0.2.0
+  firebase_storage: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.8.0"
