--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon.png"
+  image_path_android: "assets/icon.png"
+  image_path_ios: "assets/icon_for_app_store.png"
 
 flutter:
   uses-material-design: true
