--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   package_info: ^0.4.3
   sticky_headers: ^0.1.8
   image_picker: ^0.6.6+5
+  flutter_speed_dial: ^1.2.5
 
   firebase_core: ^0.5.0
   firebase_crashlytics: ^0.2.0
