--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   image_picker: ^0.6.6+5
   flutter_speed_dial: ^1.2.5
   flutter_auth_buttons: ^0.10.0
+  readmore: ^1.0.0
 
   google_sign_in: ^4.5.4
   apple_sign_in: ^0.1.0
