--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   flutter_auth_buttons: ^0.10.0
   readmore: ^1.0.0
+  bloc: ^6.0.0
+  flutter_bloc: ^6.0.6
 
   google_sign_in: ^4.5.4
   apple_sign_in: ^0.1.0
