--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -25,6 +25,7 @@ Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
+Runner/GoogleService-Info.plist
 build/
 
 # Exceptions to above rules.
